--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Chung Cheng Han">
     <meta name="description" content="這是Cheng Han的個人網站，Cheng Han 是高醫的實習醫學生">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100&family=Noto+Serif+TC:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/animation.css">
     <title>首頁|Cheng Han 實習醫學生</title>
@@ -75,9 +79,9 @@
         <nav>
             <ul>
                 <li><a href="#" class="active">首頁</a></li>
-                <li><a href="#">我的履歷</a></li>
+                <li><a href="resume.html">我的履歷</a></li>
                 <li><a href="#">聯絡方式</a></li>
-                <li><a href="#">系學會美宣長</a></li>
+                <li><a href="design.html">系學會美宣長</a></li>
                 <li><a href="#">網球校隊</a></li>
             </ul>
         </nav>
